--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "react-scripts": "^3.4.1",
+    "react-tooltip": "^5.28.0",
     "socket.io": "^4.7.5",
     "stripe": "^16.2.0",
     "uuid": "^10.0.0",
