--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.19.3",
     "@stripe/stripe-js": "^4.1.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
