--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "devStart": "node --watch --env-file=.env index.js",
-    "devSeed": "node --env-file=.env seeder.js"
+    "devSeed": "node --env-file=.env seeder.js",
+    "install-frontend": "npm install --prefix frontend",
+    "build-frontend": "npm run build --prefix frontend",
+    "build": "npm install && npm run install-frontend && npm run build-frontend"
   },
   "keywords": [],
   "author": "",
